/**
 * Copyright (c) 2022 Peking University and Peking University Institute for Computing and Digital Economy
 * SCOW is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *          http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
 * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
 * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

package scow.common;

message RunningJob {
  string job_id = 1;
  string partition = 2;
  string name = 3;
  string user = 4;
  string state = 5;
  string running_time = 6;
  string nodes = 7;
  string nodes_or_reason = 8;
  string account = 9;
  string cores = 10;
  string qos = 11;
  string submission_time = 12;
  string nodes_to_be_used = 13;

  /**
  days-hours:minutes:seconds.
  The value may be  "NOT_SET"  if not yet established or "UNLIMITED" for no
  limit.  (Valid for jobs and job steps)
   */
  string time_limit = 14;

  string working_dir = 15;
}
